--- a/src/pages/Main/Main.module.css
+++ b/src/pages/Main/Main.module.css
@@ -81,3 +81,15 @@ h1{
   height:1px;
   background-color: transparent;
 }
+
+
+@media (max-width: 750px) {
+  h2{
+    font-size: 24px;
+  }
+  
+  h1{
+    font-size: 30px;
+  }
+  
+}
