--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,60 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap');
-
-:root {
-  --primary-color: #121212;
-}
-
-.AboutPage {
+.AboutIntro {
   position: relative;
-  width: 100vw;
-  height: 500vh;
-  background-color: var(--primary-color);
   overflow: hidden;
 }
 
-.Title, .StoryText, .FinalText {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  font-family: 'Poppins', sans-serif;
-  font-weight: 900;
-  text-align: center;
-  color: white;
-  text-transform: uppercase;
-  z-index: 4;
+.Body {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--color-white);
+  overflow: hidden;
+  z-index: 10;
 }
 
-.Title { font-size: 4vw; opacity: 1; }
-.StoryText { font-size: 3vw; opacity: 0; }
-.FinalText { font-size: 5vw; opacity: 0; z-index: 5; }
-
-.Portrait {
-  position: fixed;
-  left: 19%;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 75vh;
-  width: auto;
-  max-height: 683px;
-  z-index: 3;
-}
-
-.Background, .BackgroundSmall {
-  position: fixed;
-  top: 50%;
-  transform: translateY(-50%);
-  height: 75vh;
-  width: auto;
-  max-height: 683px;
-  opacity: 0;
-}
-
-.Background { right: 19%; z-index: 2; }
-.BackgroundSmall { left: 10%; z-index: 1; }
-
-.Spacer {
-  height: 400vh;
-  width: 100%;
-  background-color: transparent;
-}
