--- a/src/pages/About/HorizontalBody/HorizontalBody.module.css
+++ b/src/pages/About/HorizontalBody/HorizontalBody.module.css
@@ -1,12 +1,80 @@
-.HorizontalBody{
+.HorizontalBody {
+  display: block;
+  height: auto;
   width: 100%;
-  height: 500px;
+  overflow: hidden;
+  position: relative;
+  background-color: var(--color-tertiary);
+  font-family: "Poppins", sans-serif;
+  font-size: 25px;
+  text-align: left;
+  font-weight: 100;
+}
+
+.HorizontalBody span {
+  color: var(--color-tertiary);
+  font-weight: bold;
+}
+
+.HorizontalContainer {
+  display: block;
+  height: 100%;
+  width: 100vw;
+  position: relative;
+}
+
+
+.HorizontalSlider {
+  width: max-content;
+  height: 100vh;
   display: flex;
   flex-direction: row;
   justify-content: start;
   gap: 20px;
 }
-.HorizontalBody img{
+
+.HorizontalBody img {
   height: 100%;
   width: auto;
+}
+
+.SecctionContainer {
+  width: 100vw;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.TextContainer {
+  width: 40vw;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  overflow: hidden;
+  margin-left: -5vw;
+  background-color: var(--color-white);
+  border: 20px solid var(--color-black);
+  padding: 1em;
+
+}
+
+.ImgContainer {
+  width: auto;
+  max-width: 50vw;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  border: 20px solid var(--color-black);
+
+}
+
+.ImgContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
