--- a/src/pages/About/AboutBody/AboutBody.module.css
+++ b/src/pages/About/AboutBody/AboutBody.module.css
@@ -1,4 +1,4 @@
-.MoreBody {
+.AboutBody {
   color: var(--color-black);
 }
 
@@ -18,7 +18,7 @@
 
 .MainText,
 .CenterText {
-  padding: 50px 0 50px 0;
+  padding: 50px 0 0px 0;
 }
 
 .CtaText {
@@ -30,13 +30,21 @@
   padding: 50px 0 100px 0;
 }
 
-.BodyContainer p {
+.AboutBody p {
   margin-bottom: 50px;
 }
 
-.BodyContainer span {
+.AboutBody span {
   color: var(--color-tertiary);
   font-weight: bold;
+}
+
+.AboutBody h1{
+  color: var(--color-black);
+  font-family: "Poppins", sans-serif;
+  font-size: 50px;
+  font-weight: bold;
+  margin-bottom: 200px;
 }
 
 .CtaText h3 {
@@ -52,28 +60,4 @@
   justify-content: center;
   gap: 300px;
   padding: 50px 0 100px 0;
-}
-
-.ImageContainer{
-  width: 50%;
-  padding: 5%;
-  height: 100vh;
-  text-align: left;
-  box-sizing: border-box;
-  position:sticky;
-  top:0;
-  left:0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.FeedBackContainer{
-  width: 50%;
-  padding: 5%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  box-sizing: border-box;
-  margin-left: 50%;
 }
