--- a/src/pages/About/HorizontalBody/HorizontalBody.module.css
+++ b/src/pages/About/HorizontalBody/HorizontalBody.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   overflow: hidden;
   position: relative;
-  background-color: var(--color-tertiary);
+  background-color: var(--color-white);
   font-family: "Poppins", sans-serif;
   font-size: 25px;
   text-align: left;
