--- a/src/pages/About/AboutBody/AboutBody.module.css
+++ b/src/pages/About/AboutBody/AboutBody.module.css
@@ -9,6 +9,7 @@
   font-weight: 100;
 }
 
+
 .CenterText {
   width: max-content;
   transform: translateX(-50%);
@@ -60,4 +61,41 @@
   justify-content: center;
   gap: 300px;
   padding: 50px 0 100px 0;
+}
+
+
+.enlaceSubrayado {
+  display: block;
+  font-family: "Poppins", sans-serif;
+  font-size: 2.5em;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--color-primary);
+  position: relative;
+  padding: 10px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.enlaceSubrayado::after {
+  content: '';
+  position: absolute;
+  left: -100%;
+  bottom: 5px;
+  width: 100%;
+  height: 5px;
+  border-radius: 5px;
+  background: var(--color-primary);
+  animation: moveUnderline 3s infinite linear;
+}
+
+
+
+@keyframes moveUnderline {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 100%;
+  }
 }
