--- a/src/pages/Main/MainBody/LightHouse/LightHouse.module.css
+++ b/src/pages/Main/MainBody/LightHouse/LightHouse.module.css
@@ -22,3 +22,14 @@
   pointer-events: none;
   clip-path: circle(0px at 0px 0px); /* Asegura que inicie oculta */
 }
+
+
+.Trigger{
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  top: 372px;
+  left: 330px;
+  z-index: 10;
+  cursor: pointer;
+}
