shell triggers added

--- a/src/pages/Main/MainBody/MainBody.module.css
+++ b/src/pages/Main/MainBody/MainBody.module.css
@@ -29,6 +29,14 @@
   color: var(--color-secondary);
   font-weight: bold;
 }
+.TreasuresSpan{
+  color: var(--color-tertiary) !important;
+  cursor: pointer;
+}
+
+.TreasuresSpan:hover{
+  color: var(--color-primary) !important;
+}
 
 .CtaText h3{
   font-size: 1.2em;
