--- a/src/pages/Main/WordRevealLoop/WordRevealLoop.module.css
+++ b/src/pages/Main/WordRevealLoop/WordRevealLoop.module.css
@@ -5,7 +5,7 @@
   align-items: start;
   height: 60vh;
   max-width: 100vw;
-  font-size: 13vw;
+  font-size: 12vw;
   margin: 0vh 5vw;
   font-weight: 700;
   overflow: hidden;
@@ -23,4 +23,21 @@
 
 .fadeOut {
   opacity: 0;
+}
+
+@media (max-width: 768px) { /* Solo en móviles */
+
+  .word {
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+  }
+  .container{
+    justify-content: flex-start;
+    padding-top: 10vh;
+    font-size: 12vh;
+    height: 100vh;
+    letter-spacing: 0;
+    box-sizing: border-box;
+  }
+
 }
