--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root{
   --color-primary: #0f172a;
-  --color-secondary: #1e3a8a;
+  --color-secondary: #8c52ff;
   --color-tertiary: #c79557;
   --color-white: #f5f5f5;
   --color-black: #000;
