--- a/src/pages/Main/VideoPlayer/VideoPlayer.module.css
+++ b/src/pages/Main/VideoPlayer/VideoPlayer.module.css
@@ -5,11 +5,58 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: black; /* Fondo negro para evitar parpadeos */
+  background: black;
+  /* Fondo negro para evitar parpadeos */
 }
 
 .video {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Ajusta el video al contenedor */
+  object-fit: cover;
+  /* Ajusta el video al contenedor */
+}
+
+@media (max-width: 768px) {
+
+  /* Cursor Play Video */
+  .playVideo {
+    width: 0;
+    height: 0;
+    mix-blend-mode: normal;
+    border: 15px solid transparent;
+    border-right: 0;
+    border-left: 30px solid var(--color-secondary);
+    border-radius: 0;
+    background-color: transparent;
+    position: absolute;
+    /* Para que el ::after no mueva nada */
+  }
+  .pauseVideo {
+    width: 25px;
+    height: 30px;
+    mix-blend-mode: normal;
+    border-right: 7px solid var(--color-secondary);;
+    border-left: 7px solid var(--color-secondary);
+    border-radius: 0;
+    background-color: transparent;
+    position: absolute; /* Para que el ::after no mueva nada */
+  }
+  
+  .playVideo::after, .pauseVideo::after {
+    content: "";
+    position: absolute;
+    width: 50px; /* Tamaño del círculo */
+    height: 50px;
+    border: 2px solid var(--color-secondary);
+    border-radius: 50%;
+    top: -27px;
+    left: -45px;
+  
+  }
+  
+  .pauseVideo::after {
+    top: -12px;
+    left: -22px;
+  
+  }
 }
