--- a/src/pages/Main/WordRevealLoop/WordRevealLoop.module.css
+++ b/src/pages/Main/WordRevealLoop/WordRevealLoop.module.css
@@ -25,7 +25,7 @@
   opacity: 0;
 }
 
-@media (max-width: 768px) { /* Solo en móviles */
+@media (max-width: 1024px) and (hover: none) {
 
   .container{
     justify-content: center;
