--- a/src/pages/Main/VideoPlayer/VideoPlayer.module.css
+++ b/src/pages/Main/VideoPlayer/VideoPlayer.module.css
@@ -1,19 +1,39 @@
-.videoContainer {
+.VideoPlayer{
+  position: relative;
+}
+.ParallaxContainer {
   width: 100vw;
-  height: 40vh;
+  height: 40vh; /* Asegura que el contenedor tiene altura */
+  position: relative;
   overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: black;
-  /* Fondo negro para evitar parpadeos */
 }
 
-.video {
+.CustomBackground {
+  width: 100vw;
+  height: 100vh; /* Asegura que el contenedor tiene altura */
+  pointer-events: none;
+}
+
+.BackgroundContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.Video {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* Ajusta el video al contenedor */
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: auto; /* Permite que el usuario haga clic en el video */
 }
 
 @media (max-width: 1024px) and (hover: none) {
@@ -31,9 +51,13 @@
     position: absolute;
     pointer-events: none;
     /* Para que el ::after no mueva nada */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   .pauseVideo {
     width: 25px;
+    margin-left: -2.5px;
     height: 30px;
     mix-blend-mode: difference;
     border-right: 7px solid var(--color-white);
@@ -42,6 +66,9 @@
     background-color: transparent;
     position: absolute; /* Para que el ::after no mueva nada */
     pointer-events: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   
   .playVideo::after, .pauseVideo::after {
