--- a/src/pages/RootLayout/Header/Header.module.css
+++ b/src/pages/RootLayout/Header/Header.module.css
@@ -1,4 +1,4 @@
-.Header{
+.Header {
   position: fixed;
   top: 0;
   left: 0;
@@ -7,9 +7,11 @@
   display: flex;
   flex-direction: column;
   justify-content: end;
+  transition: transform 0.5s ease-in-out;
+  z-index: 99999;
 }
 
-.Box{
+.Box {
   height: 75%;
   border-top: 1px solid var(--color-black);
   border-bottom: 4px solid var(--color-black);
@@ -19,4 +21,13 @@
   justify-content: space-between;
   box-sizing: content-box;
   padding: 0 3vw;
+}
+
+/* Animaciones */
+.visible {
+  transform: translateY(0);
+}
+
+.hidden {
+  transform: translateY(-100%);
 }
