--- a/src/components/PhotoShooter/PhotoShooter.module.css
+++ b/src/components/PhotoShooter/PhotoShooter.module.css
@@ -1,10 +1,13 @@
 /* Contenedor principal donde aparecen las imágenes */
 .photoShooterContainer {
-  position: relative;
-  width: 600px;
-  height: 600px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left:0;
   overflow: hidden;
-  background-color: black; /* Para depuración, quítalo si no es necesario */
+  background-color: transparent; /* Para depuración, quítalo si no es necesario */
+  z-index:99;
 }
 
 /* Cada contenedor de imagen */
