--- a/src/pages/Main/PassionSection/PassionSection.module.css
+++ b/src/pages/Main/PassionSection/PassionSection.module.css
@@ -1,8 +1,9 @@
-.PasionSection{
+.PassionSection{
    border-top: 4px solid var(--color-black);
   width: 100vw;
-  height: 80vh;
   padding: 2em;
+  height: 80vh;
+  font-size: 2.5vw;
   position: relative;
   background-color: var(--color-white);
    opacity: 1; 
@@ -10,15 +11,16 @@
   background-blend-mode: overlay; 
 }
 
-.PasionSection p{
+.PassionSection p{
   margin:0;
   padding:0;
   width: 100%;
-  font-size: 2.5vw;
   letter-spacing: 0.2em;
   line-height: 1.7em;
   color: var(--color-black);
   text-align: left;
+  position: relative;
+  
 }
 
 .Smile{
@@ -31,7 +33,7 @@
   left: 0;
   line-height: 1;
   font-weight: 700;
-  z-index: 100;
+  z-index: 1000;
   color: var(--color-black);
   pointer-events: none; 
 }
@@ -54,7 +56,21 @@
 }
 
 @media (max-width: 1024px) and (hover: none) {
-  .PasionSection{
+  .PassionSection{
     font-size: 2.5vh;
+    height: 65vh;
+  }
+  .PassionSection p{
+    z-index: 1000;
+  }
+  .Question{
+    bottom: -2vh;
+  }
+  .Question span{
+    font-size: 20vw;
+  }
+  
+  .Question span:first-of-type{
+    font-size: 10vw;
   }
 }
