--- a/src/pages/Main/PassionSection/PassionSection.module.css
+++ b/src/pages/Main/PassionSection/PassionSection.module.css
@@ -53,6 +53,11 @@
   background-color: var(--color-black);
   width: 100vw;
   height: 100vh;
+  color: var(--color-white);
+  letter-spacing: 0.2em;
+  line-height: 1.7em;
+  padding: 2em;
+  font-size: 2.5vw;
 }
 
 @media (max-width: 1024px) and (hover: none) {
@@ -72,5 +77,8 @@
   
   .Question span:first-of-type{
     font-size: 10vw;
+  }
+  .DarkSection{
+    font-size: 2.5vh;
   }
 }
