--- a/src/pages/Main/PassionSection/PassionSection.module.css
+++ b/src/pages/Main/PassionSection/PassionSection.module.css
@@ -56,8 +56,23 @@
   color: var(--color-white);
   letter-spacing: 0.2em;
   line-height: 1.7em;
-  padding: 2em;
   font-size: 2.5vw;
+  padding: 2em 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.DarkSection p{
+  padding: 0 2em;
+}
+.Quote{
+  width: max-content;
+  font-size: 14vw;
+  line-height: normal;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  padding: 0 1em;
 }
 
 @media (max-width: 1024px) and (hover: none) {
