--- a/src/pages/Main/PassionSection/PassionSection.module.css
+++ b/src/pages/Main/PassionSection/PassionSection.module.css
@@ -95,6 +95,9 @@
   }
   .DarkSection{
     font-size: 2.5vh;
-    height: auto;
+  }
+  .Quote{
+    font-size: 20vh;
+    padding: 0 0.5em;
   }
 }
