--- a/src/pages/Main/Inspiration/Inspiration.module.css
+++ b/src/pages/Main/Inspiration/Inspiration.module.css
@@ -1,8 +1,46 @@
 .Inspiration{
   width: 100vw;
-  height: 100vh;
+  position: relative;
 }
 .ImagesContainer{
   width:100vw;
-  height: 75vh;
+  height: 80vh;
+  position: relative;
+}
+
+.Title{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  font-size: 14vw;
+  text-transform: UPPERCASE;
+  font-weight: 700;
+  color: var(--color-white);
+  pointer-events: none;
+}
+.Subtitle{
+  font-size: 2.5vw;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  padding: 0 2em;
+  width: 100vw;
+  height: 20vh;
+  border-bottom: 4px solid var(--color-black);
+  color: var(--color-black);
+}
+
+@media (max-width: 1024px) and (hover: none) {
+  .Subtitle{
+    font-size: 2.5vh;
+    text-align: center;
+    justify-content: center;
+  }
+  .ImagesContainer{
+    width:100vw;
+    height: 40vh;
+    position: relative;
+  }
 }
