--- a/src/components/CustomCursor/CustomCursor.module.css
+++ b/src/components/CustomCursor/CustomCursor.module.css
@@ -11,6 +11,12 @@
   z-index: 999999;
 }
 
+.none{
+  display: none !important;
+}
+
+
+
 /* Cursor Play Video */
 .playVideo {
   width: 0;
@@ -72,9 +78,18 @@
   background-repeat: no-repeat;
 }
 
-.none{
-  display: none !important;
+
+.pointer{
+  border-radius: 0;
+  background: transparent;
+  width: 40px;
+  height:40px;
+  mix-blend-mode:difference;
+  background-image: url('../../assets/icons/svg/hand-pointer.svg');
+  background-position: center;
+  background-size: contain;
 }
+
 
 
 
