--- a/src/components/Feature/Feature.module.css
+++ b/src/components/Feature/Feature.module.css
@@ -1,6 +1,4 @@
 .Feature{ 
-  background-color: lightblue;
-  border: 2px solid black;
   max-width: 45vw;
   min-width: 35vw;
   height: 100vh;
@@ -48,3 +46,13 @@
   object-fit: cover;
 }
 
+
+@media (max-width: 1024px) and (hover: none) {
+  .Feature{ 
+    max-width: 100vw;
+    min-width: 100vw;
+  }
+  .Title{
+    font-size: 17vw;
+  }
+}
