--- a/src/pages/RootLayout/Footer/Footer.module.css
+++ b/src/pages/RootLayout/Footer/Footer.module.css
@@ -7,8 +7,8 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  transition: transform 0.5s ease-in-out;
-  z-index: 99999;
+  font-size: 2.5vw;
+  z-index: 99997;
 }
 
 .Box {
@@ -27,7 +27,7 @@
   font-size:2vw;
 }
 
-.LeftStack, .RigthStack{
+.LeftStack, .RightStack{
   display: flex;
   align-items: center;
   position: relative;
@@ -36,9 +36,13 @@
 .LeftStack{
   gap: 2em;
 }
-
+.RightStack a{
+  all: unset;
+  height: 100%;
+  display: flex
+;
+}
 .IconContainer{
-  margin-right:1em;
   width: 5vh;
   height: 5vh;
 }
@@ -74,7 +78,7 @@
 }
 @media (max-width: 1024px) and (hover: none) {
   .Email{
-    font-size:3vw;
+    font-size:4vw;
   }
   .CopiedSpan{
     font-size: 2vw;
