--- a/src/components/CustomCursor/CustomCursor.module.css
+++ b/src/components/CustomCursor/CustomCursor.module.css
@@ -84,6 +84,7 @@
   background: transparent;
   width: 40px;
   height:40px;
+  margin-left:-20px;
   mix-blend-mode:difference;
   background-image: url('../../assets/icons/svg/hand-pointer.svg');
   background-position: center;
