--- a/src/components/PhotoShooter/PhotoShooter.module.css
+++ b/src/components/PhotoShooter/PhotoShooter.module.css
@@ -4,7 +4,7 @@
   height: 100%;
   top: 0;
   left: 0;
-  overflow: hidden;
+  overflow: visible;
   background-color: transparent;
   z-index: 99;
 }
