--- a/src/components/Smilie/Smilie.module.css
+++ b/src/components/Smilie/Smilie.module.css
@@ -42,15 +42,15 @@
   border-radius: 50%;
   border-radius: 0 0 50% 50%;
   position: absolute;
-  top: 90%;
+  top: 89%;
   left: 70%;
-  transform: rotate(330deg);
-  transition: height 0.5s ease-in-out, transform 0.5s ease-in-out;
+  transform: rotate(325deg);
+  transition: height 0.5s ease-in-out, transform 0.5s ease-in-out, top 0.5s ease-in-out;
 }
 
 .Smilie:hover .Tongue{
-  transform: rotate(337deg);
-
+  transform: rotate(335deg);
+  top: 92%;
   height: 40%;
 }
 
