--- a/src/pages/About/Cover/Cover.module.css
+++ b/src/pages/About/Cover/Cover.module.css
@@ -1,7 +1,7 @@
 .Cover {
   width: 100vw;
   height: 100vh;
-  background-color: var(--color-secondary);
+  padding-top: 15vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,5 +24,4 @@
 .LowerSection{
   height: 15vw;
   width: 100vw;
-  background-color: lightcoral;
 }
