--- a/src/pages/About/Cover/Marquee/Marquee.module.css
+++ b/src/pages/About/Cover/Marquee/Marquee.module.css
@@ -2,6 +2,7 @@
   overflow: hidden;
   white-space: nowrap;
   box-sizing: border-box;
+  height: fit-content;
 }
 
 .MarqueeContent {
@@ -23,10 +24,25 @@
 }
 
 .Separator {
-  font-size: 12vw;
+  font-size: 1em;
   vertical-align: middle;
   line-height: 1;
   position: relative;
   top: -0.2em;
   left: -0.1em;
+}
+
+
+@media (max-width: 1024px) and (hover: none) {
+
+  .Word{
+    font-size: 25vw;
+    letter-spacing: 2vw;
+  }
+  .Separator{
+    left: 0;
+  }
+  .MarqueeContent {
+    animation: marquee 10s linear infinite;
+  }
 }
