--- a/src/pages/About/Projects/Projects.module.css
+++ b/src/pages/About/Projects/Projects.module.css
@@ -1,22 +1,59 @@
 .Projects {
   width: 100vw;
-  height: 100vh;
   display: flex;
-  flex-direction: row;
+  align-items: flex-start;
+  position: relative; /* Asegura que el sticky funcione */
+  overflow: unset!important;
 }
 
 .InfoContainer{
   width: 50vw;
   height: 100vh;
-  background-color: lightcoral;
+  position: sticky;
+  top: 0; /* Se mantiene pegado al top de la ventana */
+  left: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.InfoContainer>.Title{
+  font-size: 3vw;
+  font-weight: bold;
 }
 
 .ProjectsContainer{
-  width: 50vw;
-  height: 100vh;
+  width: 50vw;  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+}
+
+.ProjectsList{
+  list-style: none;
+  width: 100%;
+  padding: 0;
+}
+
+.ProjectsList li{
+  font-size: 2.5vw;
+  height: 2em;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: lightblue;
+  text-align: center;
+  border-top: 1px solid var(--color-black);
+  border-bottom: 1px solid var(--color-black);
+  border-left: 2px solid var(--color-black);
+  border-right: 2px solid var(--color-black);
+}
+
+.ProjectsList li:hover{
+  background-color: var(--color-secondary) !important;
+  border-left: 2px solid var(--color-secondary) !important;
 }
