new menu styles

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 
 :root{
   --color-primary: #0f172a;
-  --color-secondary: #d3c2f4;
+  --color-secondary: #d6a77a;
+  --color-secondary: #f9df00;
+  --color-secondary: #282828;
   --color-tertiary: #c79557;
   --color-white: #f5f5f5;
   --color-black: #000;
