--- a/src/pages/About/Projects/ProjectReview/ProjectReview.module.css
+++ b/src/pages/About/Projects/ProjectReview/ProjectReview.module.css
@@ -7,6 +7,7 @@
   justify-content: space-evenly;
   align-items: center;
   background-color: var(--color-secondary);
+  color: var(--color-white);
   padding: 2em;
 }
 
