--- a/src/pages/About/Projects/Projects.module.css
+++ b/src/pages/About/Projects/Projects.module.css
@@ -18,6 +18,8 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  border-top: 1px solid var(--color-black);
+  border-bottom: 1px solid var(--color-black);
 }
 
 .InfoContainer>.Title{
@@ -40,7 +42,7 @@
 
 .ProjectsList li{
   font-size: 2.5vw;
-  height: 2em;
+  height: 15vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -56,4 +58,5 @@
 .ProjectsList li:hover{
   background-color: var(--color-secondary) !important;
   border-left: 2px solid var(--color-secondary) !important;
+  color: var(--color-white) !important;
 }
