--- a/src/pages/About/Projects/ProjectReview/ProjectReview.module.css
+++ b/src/pages/About/Projects/ProjectReview/ProjectReview.module.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  background-color: var(--color-secondary);
+  background-color: transparent;
   color: var(--color-white);
   padding: 2em;
 }
