--- a/src/pages/About/Projects/Projects.module.css
+++ b/src/pages/About/Projects/Projects.module.css
@@ -3,7 +3,6 @@
   display: flex;
   align-items: flex-start;
   position: relative;
-  /* Asegura que el sticky funcione */
   overflow: unset !important;
   background-color: #282828;
   opacity: 1;
@@ -18,7 +17,6 @@
   height: 100vh;
   position: sticky;
   top: 0;
-  /* Se mantiene pegado al top de la ventana */
   left: 0;
   overflow: hidden;
   display: flex;
@@ -66,16 +64,39 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* border-top: 1px solid var(--color-secondary);
-  border-bottom: 1px solid var(--color-secondary);
-  border-left: 2px solid var(--color-secondary);
-  border-right: 2px solid var(--color-secondary); */
   margin: 1vw;
   background-color: var(--color-white);
+  overflow: hidden;
 }
 
-.ProjectsList li:hover {
+.ProjectsList li:hover, .ProjectsList li.Active {
   background-color: transparent !important;
   border-left: none !important;
   color: var(--color-white) !important;
+}
+
+.InfoContainerMobile {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out;
+}
+
+.InfoContainerMobile.Active {
+  max-height: 100vh;
+}
+
+@media (max-width: 1024px) and (hover: none) {
+  .InfoContainer{
+    display: none;
+  }
+  .ProjectsContainer {
+    width: 100vw;
+  }
+  .ProjectsList li {
+    width: 100vw;
+    font-size: 6.5vw;
+    min-height: 2.5em;
+    height: auto;
+    margin: 1vw 0;
+  }
 }
