--- a/src/pages/About/Projects/Projects.module.css
+++ b/src/pages/About/Projects/Projects.module.css
@@ -30,7 +30,7 @@
 .TitleContainer {
   font-size: 3vw;
   font-weight: bold;
-  background-color: var(--color-white);
+  color: var(--color-white);
   width: 100%;
   height: 100%;
   position: relative;
@@ -98,5 +98,6 @@
     min-height: 2.5em;
     height: auto;
     margin: 1vw 0;
+
   }
 }
