--- a/src/index.css
+++ b/src/index.css
@@ -66,6 +66,9 @@ body {
   overflow-x: hidden;
   display: flex !important;
   margin: 0 !important;
+  background-image: url('/src/assets/backgrounds/noise.png');
+  background-repeat: repeat;
+  background-size: auto; /* Cambiado de 'contain' a 'auto' */
 }
 
 /* Styling for links */
