--- a/src/components/ImageDiscover/ImageDiscover.module.css
+++ b/src/components/ImageDiscover/ImageDiscover.module.css
@@ -26,3 +26,9 @@
   pointer-events: none;
   clip-path: circle(0px at 0px 0px);
 }
+
+@media (max-width: 1024px) and (hover: none) {
+  .ImageOverlay {
+    display: none;
+  }
+}
