--- a/src/pages/Main/Contact/Contact.module.css
+++ b/src/pages/Main/Contact/Contact.module.css
@@ -3,9 +3,8 @@
   text-align: center;
   letter-spacing: 0.2em;
   width: 100vw;
-  padding: 2em;
+  padding: 10vh 0;
   height: 100vh;
-  padding-bottom: calc(10vh + 2em);
   display: flex;
   flex-direction: column;
   align-items: center;
