--- a/src/pages/Main/PassionSection/PassionSection.module.css
+++ b/src/pages/Main/PassionSection/PassionSection.module.css
@@ -9,6 +9,7 @@
    opacity: 1; 
   background-image: radial-gradient(circle at bottom left, #000000, #f5f5f5), repeating-radial-gradient(circle at bottom left, #000000, #000000, 35px, transparent 150px, transparent 35px);
   background-blend-mode: overlay; 
+  overflow: hidden;
 }
 
 .PassionSection p{
