--- a/src/pages/About/Cover/Cover.module.css
+++ b/src/pages/About/Cover/Cover.module.css
@@ -2,6 +2,7 @@
   width: 100vw;
   height: 100vh;
   padding-top: 10vh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
