--- a/src/pages/Main/ProjectsCta/ProjectsCta.module.css
+++ b/src/pages/Main/ProjectsCta/ProjectsCta.module.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
   background-color: #b4b0a9;
   border-top: 4px solid var(--color-black);
   border-bottom: 4px solid var(--color-black)
